m-dppl/3.0/de.rst
.. _mdppl_v3_de:

Modulare Digital Peer Publishing Lizenz (v3, de)
================================================

HTML Version der modularen Digital Peer Publishing Lizenz (Version 3, Deutsch)

Version 3.0 -- November 2008

Copyright © 2004 - 2008 Ministerium für Innovation, Wissenschaft,
Forschung und Technologie des Landes Nordrhein-Westfalen

Erstellt von Axel Metzger und Till Jaeger, Institut für Rechtfragen der
Freien und Open Source Software, https://www.ifross.org

Präambel
--------

Das Internet hat die Rahmenbedingungen wissenschaftlichen Arbeitens
tiefgreifend verändert. Dokumente sind in unübe­rschaubarer Menge in
öffentlich zugänglichen Webangeboten verfügbar. Klassische
Wissenschaftsmedien, wie Fachjournals und Buchpublikationen, werden
durch elektronische Angebote ergänzt oder sogar ersetzt. Zugleich geben
Wissenschaftler Quellen aller Art in Datennetzen im Wege der
Individualkommunikation weiter. Die Digitalisierung ermöglicht die
Veränderung von Dokumenten. Dies erleichtert die interaktive
Zusammenarbeit von Wissenschaftlern. Ein Prozess, der von den führenden
deutschen Forschungsorganisationen mit der Berliner Erklärung
(https://openaccess.mpg.de/Berliner-Erklaerung) ausdrücklich unterstützt wird.

Diese neuen Möglichkeiten der Kommunikation gestatten eine dezentrale
Verbreitung wissenschaftlicher Inhalte in veränderter oder unveränderter
Form - schnell, transparent und forschungsnah. Wissenschaftler sind
regelmäßig an der weiten, qualitätsvollen Verbreitung ihrer
Forschungsergebnisse interessiert. Die Modulare DPPL Lizenz gestattet
deshalb die Weitergabe von urheberrechtlich geschützten Werken.

Sie ermöglicht darüber hinaus die Veränderung von denjenigen Teilen des
Werkes, die von den Urhebern als veränderbar gekennzeichnet worden sind
und die Weitergabe entsprechend veränderter Versionen. Diese Regelung
soll die Zusammenarbeit von Wissenschaftlern erleichtern, zugleich aber
dem Urheber die Möglichkeit lassen, nur bestimmte Teile seines Werks zur
interaktiven Zusammenarbeit frei zu geben. Diesen Prozess fair,
transparent und sicher für alle Beteiligten zu gestalten, ist Ziel der
Modularen DPPL Lizenz.

Die modulare DPPL Lizenz bietet die lizenzrechtliche Grundlage für eine
entsprechende Verbreitung von Dokumenten in E-Journals. Die Lizenz
gestattet jedermann die Weitergabe des Dokuments in elektronischer Form,
:abbr:`z. B.(zum Beispiel)` es in Netzwerken öffentlich zur Verfügung zu stellen.

Die Weitergabe durch andere ist allerdings an Pflichten geknüpft,
insbesondere im Hinblick auf die Nennung der Autoren und Rechtsinhaber
und die verwendeten biblio­graphischen Angaben, um eine einheitliche
Zitierweise zu gewährleisten. Wer veränderte Versionen des Werkes nutzt,
darf die Autoren der ursprünglichen Version nicht mehr als Urheber der
veränderten Werkteile benennen, muss aber in geeigneter Weise auf die
Vorarbeiten hinweisen. Auch darf das veränderte Werk nur unter den
Bedingungen der Modularen DPPL Lizenz verbreitet werden.

Die Rechte für die Nutzung in körperlicher Form, insbesondere die Rechte
zur Verbreitung in Druckform, auf Trägermedien oder in
Print-on-demand-Diensten,, verbleiben bei dem Urheber oder sonstigen
Rechtsinhaber und werden durch diese Lizenz nicht erfasst. Dadurch wird
zum einen die elektronische Verbreitung gefördert, zum anderen besteht
für den Rechtsinhaber die Möglichkeit, die Rechte zum körperlichen
Vertrieb von Werkexemplaren einem einzelnen Berechtigten, etwa einem
Verlag, einzuräumen. Wer eine parallele Verbreitung seiner Werke unter
dieser Lizenz und in einem Verlag wünscht, sollte darauf achten, dass er
nicht die ausschließlichen Rechte für die öffentliche Zugänglichmachung
an den Verlag überträgt, sondern allenfalls einfache Rechte.

Diese Lizenzbedingungen verstehen sich als Angebot an jedermann auf
Abschluss eines Lizenzvertrages dieses Inhalts. Zwischen Lizenzgeber und
Lizenznutzer kommt dadurch ein Vertrag zustande, dass der Nutzer die
Rechte aus dem Lizenzvertrag wahrnimmt.

Als Lizenzgeber kommen entweder die Autoren selbst in Betracht, sofern
die Rechte an den Werken bei ihnen liegen, oder die sonstigen Inhaber
von ausschließlichen Nutzungsrechten an den Werken, insbesondere
Arbeitgeber, Verlage etc. Allerdings ist hierbei zu beachten, dass die
Modulare DPPL Lizenz pauschal jede Modifizierung der als veränderbar
gekennzeichneten Teile des Werks gestattet. Um die Persönlichkeitsrechte
des Urhebers zu schützen ist es deshalb rechtlich zwingend erforderlich,
dass der Urheber der Benutzung dieser Lizenz stets auch selbst zustimmt,
selbst wenn er nicht mehr Inhaber der ausschließlichen wirtschaftlichen
Nutzungsrechte sein sollte.

Abschnitt 1: Definitionen
-------------------------

§ 1: Definitionen
~~~~~~~~~~~~~~~~~

In diesem Lizenzvertrag werden die nachfolgend definierten Begriffe
einheitlich verwendet:

(a) "Digitale Signatur": Daten in elektronischer Form, die dem Werk
beigefügt oder logisch mit ihm verknüpft sind und die zur
Authentifizierung des Urhebers oder Inhabers eines ausschließlichen
Nutzungsrechts dienen.

(b) "History": Informationen zu dem Werk, insbesondere zu den Urhebern,
zur Entstehungsgeschichte oder zu der Version des Werkes, die
unmittelbar in das Werk eingefügt oder ihm in einer eigenen Datei
beigefügt werden und die der Information des Nutzers dienen. Die History
kann auch Hinweise darauf enthalten, an welchem Ort der Urheber aktuelle
Versionen des Werks zur Verfügung stellt oder nachträgliche inhaltliche
Korrekturen aufführt.

(c) "Lizenzgeber": Der Inhaber eines ausschließlichen Nutzungsrechts an
dem Werk und/oder der Urheber sowie seine Rechtsnachfolger, die den
Abschluss dieses Lizenzvertrages anbieten.

(d) "Metadaten": Maschinenlesbare, strukturierte Informationen über das
Werk, die in diesem enthalten sind und die der vereinfachten
maschinellen Auffindbarkeit des Werkes und/oder einer effizienten
Verwaltung von Datenbeständen dienen (:abbr:`z. B.(zum Beispiel)` "HTML-Metatags").

(e) "Metadatenmodell": Eine standardisierte Struktur für die Erfassung
von Metadaten mit definierten Elementen zur Ressourcenbeschreibung (:abbr:`z. B.(zum Beispiel)` "Dublin Core Metadata Element Set").

(f) "Nutzung": Jede Verwendung des Werkes, für die urheberrechtlich eine
Erlaubnis des Urhebers oder des Inhabers eines ausschließlichen
Nutzungsrechts erforderlich ist, :abbr:`z. B.(zum Beispiel)` die Weitergabe des Werkes oder
die Bereitstellung zum Download.

(g) "Offenes Dateiformat": Ein Dokumentenformat, das in einem für
jedermann frei einsehbaren Standard beschrieben ist und von jedermann
ohne Beschränkungen und lizenzgebührenfrei in einem Computerprogramm
implementiert werden darf. Dies gilt beispielsweise für das Open
Document Format (ODP), das Portable Document Format (PDF), DocBook und
die Hypertext Markup Language (HTML).

(h) "Sie": Der Lizenznehmer - jedermann, der diesen Lizenzvertrag
abschließt.

(i) "Veränderbare Werkteile": Diejenigen Teile des Werks, die eindeutig
als veränderbare Werkteile gekennzeichnet sind :abbr:`z. B.(zum Beispiel)` durch eine
farbliche oder sonstige grafische Hervorhebung und eine unzweifelhafte
Bezeichnung als "veränderbarer Werkteil"). Ein Hinweis auf die
veränderbaren Werkteile kann in der History erfolgen.

(j) "Veränderte Version": Jede Version des Werkes, in der Sie oder ein
Dritter Veränderungen vorgenommen haben, unabhängig davon, ob die
Veränderungen selbst die Schwelle der urheberrechtlichen Schutzfähigkeit
erreichen oder nicht. Ausgenommen sind die Fälle, in denen das Gesetz
eine zustimmungsfreie Veröffentlichung und einen zustimmungsfreien
Vertrieb gestattet ("freie Benutzung").

(k) "Vervielfältigungsstück": Ein verkörpertes Werkexemplar, also das
Werk in gegen­ständlicher Form :abbr:`z. B.(zum Beispiel)` als gedrucktes Buch oder auf
CD-ROM).

(l) "Werk": Das urheberrechtlich geschützte Werk sowie jeder sonstige,
urheberrechts­schutzfähige Gegenstand (insbesondere Datenbanken und
Fotografien), an dem Nutzungsrechte durch diesen Lizenzvertrag
eingeräumt werden.

Abschnitt 2: Nutzungsrechte
---------------------------

§ 2: Einräumung von Nutzungsrechten
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

(1) Dieser Lizenzvertrag erlaubt Ihnen, zeitlich und räumlich
unbeschränkt das Werk in elektronischer Form zu vervielfältigen, Dritten
auf elektronischem Wege zu übermitteln, :abbr:`z. B.(zum Beispiel)` per E-Mail zu übersenden,
und öffentlich zugänglich zu machen, insbesondere durch Bereitstellung
zum Download. Dabei sollen alle bekannten und unbekannten Nutzungsarten
erfasst werden, die eine unkörperliche elektronische Vervielfältigung
oder Übermittlung beinhalten. Die Nutzung in körperlicher Form,
insbesondere die Verbreitung von Druckwerken ist jedoch nicht gestattet.

(2) Dieser Lizenzvertrag berechtigt Sie ferner, das Werk in
elektronische Datenbanken oder sonstige Sammlungen aufzunehmen. Soweit
Sie dabei eigene Rechte an Datenbanken oder Sammelwerken erwerben,
dürfen Sie diese nicht dafür verwenden, die weitere Nutzung des Werkes
zu beschränken oder zu behindern.

(3) Die Einräumung der Nutzungsrechte durch diesen Lizenzvertrag erfolgt
lizenzgebührenfrei.(4) Dieser Lizenzvertrag will die Versorgung mit
authentischen Wissenschaftsinformationen im Internet stärken, aber auch
Änderungen für solche Teile ermöglichen, die der Lizenzgeber als
veränderbare Werkteile gekennzeichnet hat. Deshalb ist die Nutzung
veränderter Versionen des Werkes nur im Rahmen des § 3 gestattet.

§ 3 Veränderung
~~~~~~~~~~~~~~~

(1) Sie dürfen die veränderbaren Werkteile in beliebiger Weise
modifizieren und das veränderte Werk nach den Bestimmungen von § 2
nutzen. Bei einer Veränderung des Werks sind die geistig-persönlichen
Interessen der Urheber zu respektieren, insbesondere hat eine weitere
Nennung als Urheber im Hinblick auf die veränderten Werkteile zu
unterbleiben (siehe § 6 Abs. 2).

(2) Bei einer Veränderung des Werkes müssen Sie seinen Titel verändern.
Hierfür genügt die Aufnahme eines Zusatzes, der die Veränderung des
Werkes kenntlich macht (Versionsnummer :abbr:`o. ä.(oder ähnliches)`). Sie dürfen den Titel des
Werkes nicht verändern, wenn das Werk ansonsten inhaltlich unverändert
genutzt wird.

(3) Sie dürfen das Werk gem. § 10 mit anderen Inhalten in der Weise
verbinden, dass jedes Werk weiterhin selbständig verwertbar bleibt (z.
B. Kombination von Foto und Text).

Abschnitt 3: Nutzungsmodalitäten
--------------------------------

§ 4: Keine Pflicht zur unentgeltlichen Weitergabe
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Dieser Lizenzvertrag verpflichtet Sie nicht, die Nutzung des Werkes
unentgeltlich durchzuführen. Für den Zugang zu dem Werk oder die
Verschaffung eines Verviel­fältigungsstücks durch die elektronische
Übermittlung in einem Datennetz dürfen Sie mit dem Nutzer die Zahlung
eines Entgelts vereinbaren. Sie dürfen jedoch nicht die weitere Nutzung
durch den Erwerber von Gegenleistungen abhängig machen, da er die dafür
erforderlichen Nutzungsrechte nicht von Ihnen erhält, sondern vom
Lizenzgeber.

§ 5: Offener Zugang
~~~~~~~~~~~~~~~~~~~

(1) Wenn Sie das Werk nutzen, dürfen Sie die weitere Nutzung durch
Dritte nicht mittels technischer Schutzmaßnahmen, insbesondere durch den
Einsatz von Kopierschutzvorrichtungen jeglicher Art, verhindern oder
erschweren. Eine passwortgeschützte Zugangsbeschränkung oder die Nutzung
in einem Intranet wird nicht als technische Schutzmaßnahme angesehen.

(2) Wenn Sie das Dokument in einem offenen Dateiformat erhalten haben,
dürfen Sie es nicht ohne vorherige ausdrückliche Zustimmung des Urhebers
oder des Inhabers eines ausschließlichen Nutzungsrechts in einem
nicht-offenen Dateiformat nutzen. Die Zustimmung soll erteilt werden,
wenn wegen des hohen Verbreitungsgrades des Dateiformats ein
verbesserter Zugang zu dem Werk zu erwarten ist und sich das Dateiformat
für die Präsentation des Werkes eignet.

§ 6: Nennung von Urhebern und Nutzungsrechtsinhabern
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

(1) Wenn Sie das Werk unverändert nutzen, müssen Sie die Namensnennung
von Urhebern - Urheber- oder Copyrightvermerke - in der vorgefundenen
Art und Weise übernehmen. Gleiches gilt für die Nennung der Inhaber
eines ausschließlichen Nutzungsrechts, sofern diese im Zusammenhang mit
dem Werk genannt werden.

(2) Wenn Sie das Werk in veränderter Form nutzen, dann dürfen die
Urheber des ursprünglichen Werks nicht als Urheber der veränderten
Werkteile bezeichnet werden. Sie müssen in diesem Fall aber in
geeigneter Weise auf die ursprünglichen Urheber hinweisen, :abbr:`z. B.(zum Beispiel)` durch
den Vermerk "Basierend auf einer Tabelle von xy". Im Hinblick auf die
unveränderten Werkteile ist :abbr:`Abs.(Absatz)` 1 anzuwenden.

(3) Sie können bei einer nicht völlig unerheblichen Veränderung des
Werks einen Urheberrechtsvermerk mit Ihrem Namen oder Pseudonym
hinzufügen. Dieser Vermerk muss bei den veränderbaren Werkteilen
eingefügt werden und so gestaltet sein, dass er nicht den Eindruck ihrer
Urheberschaft an den nicht veränderten Werkteilen hervorruft.

(4) Wird das Werk in ein umfassenderes Gesamtangebot eingebunden, etwa
in ein Sammelwerk oder eine Datenbank, müssen Sie die Nennung der
Urheber und der Inhaber eines ausschließlichen Nutzungsrechts in einer
angemessenen und für die Form der Nutzung üblichen Art und Weise
sicherstellen.

(5) Digitale Signaturen, die der Urheber oder der Inhaber eines
ausschließlichen Nutzungs­rechts den nicht veränderbaren Werkteilen
hinzugefügt hat und welche die Echtheit oder Herkunft des Werkes
bestätigen, dürfen Sie nicht entfernen, es sei denn, dies ist
erforderlich, um das Werk in ein anderes - nach § 5 :abbr:`Abs.(Absatz)` 2 zulässiges -
Dateiformat zu konvertieren.

§ 7: Zitierung und Metadaten
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

(1) Um trotz der möglichen dezentralen elektronischen Nutzung eine
einheitliche Zitierweise des Werkes und eine dauerhafte Auffindbarkeit
des Dokuments für jedermann zu gewährleisten, dürfen Sie im Rahmen der
Nutzung des Werkes bibliographische Angaben zur Originalfundstelle weder
verändern noch entfernen. Sie dürfen aber zusätzliche bibliographische
Angaben hinzufügen.

(2) Wenn Sie das Werk in veränderter Weise nutzen, so müssen Sie die
Fundstelle (insbesondere die vollständige Internetadresse) angeben, an
der Sie das Werk in der von Ihnen für die Veränderung verwendeten Form
erhalten haben.

(3) Metadaten, die der Urheber oder der Inhaber eines ausschließlichen
Nutzungsrechts den nicht veränderbaren Werkteilen hinzugefügt hat,
dürfen Sie nicht entfernen, es sei denn, dies ist erforderlich, um das
Werk in ein offenes Dateiformat konvertieren zu können.

(4) Metadaten, die der Urheber oder der Inhaber eines ausschließlichen
Nutzungsrechts dem Werk hinzugefügt hat, dürfen an andere
Metadatenmodelle angepasst werden, wenn dies der erleichterten
Auffindbarkeit des Dokuments oder der Standardisierung von
Metadatenstrukturen dient.

§ 8 Freigabe von Veränderungen
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

(1) Wenn Sie das Werk in veränderter Weise nutzen, so müssen Sie die
kostenfreie Nutzung des gesamten veränderten Werks nach den Bestimmungen
der Modularen DPPL Lizenz durch jedermann gestatten.

(2) Sollte es sich bei denen von Ihnen hinzugefügten Werkteilen um ein
neues, selbständiges Werk handeln, welches auch isoliert selbständig
verwertet werden kann, so können Sie dieses neue Werk auch unter den
Bedingungen einer anderen Lizenz gemeinsam mit dem ursprünglichen Werk
nutzen.

(3) Wenn Sie das Werk in Kombination mit einem anderen Inhalt nutzen
möchten, der unter einer Creative Commons-Lizenz oder der GNU Free
Documentation License lizenziert ist, so ist dies unter den in § 10
geregelten Bedingungen gestattet.

§ 9: Mitlieferung weiterer Informationen
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

(1) Wenn Sie Nutzungshandlungen vornehmen, die Ihnen aufgrund dieses
Lizenzvertrags gestattet sind, müssen Sie dem Werk stets diesen
Lizenztext in beiden Sprachfassungen beifügen oder eine Quelle angeben,
unter der der Lizenztext auf elektronischem Weg dauerhaft und in
üblicher Weise in beiden Sprachfassungen abrufbar ist, bevorzugt durch
Download aus dem Internet. Der Lizenztext ist im `Internet <https://lizenzen.hbz-nrw.de/>`__
abrufbar.

(2) Hinweise auf diese Lizenz, die der Urheber oder der Inhaber eines
ausschließlichen Nutzungsrechts dem Werk hinzugefügt hat, dürfen Sie
weder verändern noch entfernen.

(3) Ist dem Werk eine History beigefügt, so dürfen Sie das unveränderte
Werk nur gemeinsam mit der vollständigen und unveränderten History
weitergeben. Wenn Sie das Werk in veränderter Form nutzen, dann müssen
Sie in der History kurz beschreiben, welche Änderungen Sie vorgenommen
haben. Sie können dabei einen Urhebervermerk anbringen.

§ 10: Kombination mit anderen Inhalten
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

(1) Der Lizenzgeber darf das Werk mit einem anderen Inhalt, der unter
der Creative Commons-Lizenz "Namensnennung" ("Attribution) genutzt
werden darf, für eine gemeinsame Nutzung verbinden, sofern das Werk und
der andere Inhalt weiterhin selbstständig verwertbar bleiben (:abbr:`z. B.(zum Beispiel)`
Kombination von Text und Foto).

(2) Hat der Lizenzgeber das Werk mit einem anderen Inhalt gemäß Absatz 1
verbunden, dürfen Sie die Hinweise auf die Creative Commons-Lizenz weder
verändern noch entfernen und müssen die Verbindung zwischen dem Werk und
dem anderen Inhalt unverändert beibehalten. Sie müssen die
Lizenzbedingungen der Creative Commons-Lizenz "Namensnennung"
("Attribution") für den anderen Inhalt beachten.

(3) Wenn Sie das Werk mit einem anderen Inhalt, der unter der Creative
Commons-Lizenz "Namensnennung" ("Attribution") genutzt werden darf, für
eine gemeinsame Nutzung verbinden, bei der das Werk und der andere
Inhalt weiterhin selbständig verwertbar bleiben (:abbr:`z. B.(zum Beispiel)` Kombination von
Foto und Text), so findet diese Lizenz nur auf das Werk Anwendung. Sie
dürfen die Hinweise auf die Lizenzbedingungen der Creative
Commons-Lizenz "Namensnennung" ("Attribution") weder verändern noch
entfernen und müssen die Lizenzbedingungen für den anderen Inhalt
beachten.

(4) Wenn Sie veränderbare Werkteile mit einem anderen Inhalt, der unter
der Creative Commons-Lizenz "Namensnennung" ("Attribution") genutzt
werden darf, für eine gemeinsame Nutzung verbinden, bei der das Werk und
der andere Inhalt nicht mehr selbständig verwertbar sind (z. B. Einfügen
von Text in einen anderen Text), müssen Sie die lizenzgebührenfreie
Nutzung des gesamten veränderten Werks nach den Bestimmungen der
Modularen DPPL Lizenz durch jedermann gestatten und zusätzlich die
Lizenzbedingungen der Creative Commons-Lizenz beachten.

Abschnitt 4: Abschluss und Beendigung dieses Vertrages; Vorbehalt der gesetzlichen Rechte
-----------------------------------------------------------------------------------------

§ 11: Vertragsschluss
~~~~~~~~~~~~~~~~~~~~~

Dieser Lizenztext ist ein Angebot an Sie, das auf den Abschluss eines
Lizenzvertrages zu den in diesem Lizenzvertrag genannten Bedingungen
gerichtet ist. Sie können den Lizenzvertrag annehmen, indem Sie die in §
2 des Vertrages genannten Rechte ausüben. Die Annahmeerklärung muss dem
Lizenzgeber nicht zugehen.

§ 12: Heimfall der Nutzungsrechte
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

(1) Wenn Sie die in den §§ 2-10 dieses Vertrages genannten
Verpflichtungen verletzen, entfallen automatisch Ihre durch den
Lizenzgeber mit diesem Vertrag eingeräumten Nutzungsrechte. Sie dürfen
das Werk dann nicht mehr nutzen. Sie können jedoch diesen Vertrag erneut
abschließen, wenn Sie dann die Verpflichtungen aus diesem Vertrag
einhalten.

(2) Die Nutzungsbefugnisse Dritter, die das Werk von Ihnen erworben
haben, werden durch einen Heimfall der Nutzungsrechte nicht berührt.

§ 13: Vorbehalt der gesetzlichen Rechte
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

(1) Gegenstand dieser Lizenz ist ausschließlich die Einräumung von
Nutzungsrechten, um das Werk in unveränderter oder veränderter Form der
Öffentlichkeit oder einzelnen Personen in elektronischer Form zugänglich
zu machen. Nicht in den Anwendungsbereich dieser Lizenz fallen
diejenigen Befugnisse zur Nutzung des Werkes, die sich aus den
gesetzlichen Beschränkungen des Urheberrechts ergeben, etwa die
Vervielfältigung zum privaten Gebrauch, das Zitatrecht etc. Für die
Wahrnehmung dieser Befugnisse bedarf es nicht des Abschlusses dieses
Lizenzvertrags.

(2) Etwaige gesetzliche Ansprüche des Lizenzgebers wegen der
Inanspruchnahme dieser Befugnisse bleiben vorbehalten und können durch
Verwertungsgesellschaften wahrgenommen werden (:abbr:`z. B.(zum Beispiel)` Pauschalabgaben auf
Leermedien).

 

Abschnitt 5: Haftung und Gewährleistung
---------------------------------------

§ 14: Haftung und Gewährleistung
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Die Haftung des Lizenzgebers Ihnen gegenüber beschränkt sich auf das
arglistige Verschweigen von Mängeln.

§ 15 Haftung bei Ansprüchen Dritter
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Werden die Vertragsparteien einzeln oder gemeinsam durch Dritte wegen
des Inhalts des Werkes auf Schadensersatz und/oder Kosten einer
Rechtsverfolgung in Anspruch genommen, so haftet jede Partei im
Innenverhältnis entsprechend dem Anteil ihres eigenen Verschuldens. Der
Lizenznehmer haftet alleine, wenn der Lizenzgeber in dem Werk eine
Quelle angegeben hat, unter der er nachträgliche inhaltliche Korrekturen
aufführt, und diejenigen Inhalte, die den Gegenstand der Inanspruchnahme
durch Dritte bilden, unter dieser Quelle zum Zeitpunkt der
Verletzungshandlung bereits korrigiert oder gelöscht waren.

Abschnitt 6: Der Lizenzvertrag
------------------------------

§ 16 Verhältnis der Sprachversionen
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Dieser Lizenzvertrag ist in deutscher und englischer Sprache abgefasst.
Beide Fassungen sind gleich verbindlich. Es wird unterstellt, dass die
in dem Lizenzvertrag verwandten Begriffe in beiden Fassungen die gleiche
Bedeutung haben. Ergeben sich dennoch Unterschiede, so ist die Bedeutung
maßgeblich, welche die Fassungen unter Berücksichtigung des Ziels und
Zwecks des Lizenzvertrags am besten miteinander in Einklang bringt.

§ 17 Neue Versionen des Lizenzvertrags
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

(1) Das Ministerium für Innovation, Wissenschaft, Forschung und
Technologie des Landes Nordrhein-Westfalen kann mit verbindlicher
Wirkung neue Versionen des Lizenzvertrags in Kraft setzen, soweit dies
erforderlich und zumutbar ist. Neue Versionen des Lizenzvertrags werden
im `Internet <https://lizenzen.hbz-nrw.de/>`__ mit einer
eindeutigen Versionsnummer veröffentlicht. Die neue Version des
Lizenzvertrags erlangt für Sie verbindliche Wirkung, wenn Sie von deren
Veröffentlichung Kenntnis genommen haben. Gesetzliche Rechtsbehelfe
gegen die Änderung des Lizenzvertrags werden durch die vorstehenden
Bestimmungen nicht beschränkt.

(2) Sie dürfen diesen Lizenzvertrag in unveränderter Form
vervielfältigen, verbreiten und öffentlich zugänglich machen.

§ 18 Anwendbares Recht
~~~~~~~~~~~~~~~~~~~~~~

Auf diesen Lizenzvertrag findet deutsches Recht Anwendung.

Anhang
------

Um jedermann den Abschluss dieses Lizenzvertrages zu ermöglichen, wird
empfohlen, das Werk mit folgendem Hinweis auf den Lizenzvertrag zu
versehen:

    "Jedermann darf dieses Werk unter den Bedingungen der Modularen DPPL
    Lizenz elektronisch übermitteln, zum Download bereitstellen und dabei
    die als veränderbaren Werkteile gekennzeichneten Werkteile beliebig
    verändern. Der Lizenztext ist im `Internet <https://lizenzen.hbz-nrw.de/m-dppl/3.0/de>`__ abrufbar.

Sofern das Werk mit einem oder mehreren anderen Inhalten verbunden wird,
die nach anderen Lizenzbedingungen genutzt werden können (:abbr:`z. B.(zum Beispiel)` nach
einer Creative Commons-Lizenz oder der GNU Free Documentation License),
so wird empfohlen, den Hinweis wie folgt zu ergänzen:

    "Inhalte Dritter sind durch entsprechende Hinweise gekennzeichnet und
    dürfen unter den jeweils angegebenen Lizenzbedingungen genutzt werden."